# bsf

./: .gitignore  CMakeLists.txt  README.md  arduinotab.h  bsf.pro  devicewidget.ui  loginframe.cpp  loginframe.h  logmodel.h  logtab.h  logwidget.h  main.cpp  maintabbarwidget.cpp  maintabbarwidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.cpp  server.h
apps/: CMakeLists.txt  bsfapp.cpp
data/: dbmanager.cpp
domain/: arduino.cpp  iodevice.cpp  weightcensor.cpp
forms/: deviceform.cpp  deviceform.h  devicemanager.cpp
headers/domain/: arduino.h  distantcensor.h
headers/models/: logtablemodel.h
incl/controller/: devicecontroller.h  relaycontroller.h  tabcontroller.h
incl/data/: bsfdatabaseconfig.h  dbmanager.h
incl/domain/: action.h  actionarduino.h  arduino.h  detectioncensor.h  distantcensor.h  errorcode.h  iodevice.h  iodevicepayload.h  iodevicetype.h  log.h  recipe.h  statecode.h  transformpayload.h  weightcensor.h
incl/dto/: arduinodto.h  iodevicedto.h
incl/factory/: iodeviceformfactory.h  (+1 more)
models/: logmodel.cpp  logtablemodel.cpp
src/: BasaltFactoryApp.h  CMakeLists.txt
src/controller/: devicecontroller.cpp  relaycontroller.cpp  tabcontroller.cpp
src/controller/device/: devicecontroller.cpp  devicecontroller.h
src/controller/tab/: tabcontroller.cpp  tabcontroller.h
src/data/: CMakeLists.txt  Config.cmake.in  bsf.db  bsfdatabaseconfig.cpp  bsfdatabaseconfig.h  dbmanager.cpp
src/domain/: CMakeLists.txt  action.cpp  action.h  actionarduino.cpp  arduino.cpp  arduino.h  bafalog.cpp  bafalog.h  component.cpp  component.h  detectionsensor.cpp  detectionsensor.h  distantcensor.cpp  iodevice.cpp  iodevice.h  iodevicepayload.cpp  iodevicetype.cpp  iodevicetype.h  log.cpp  recipe.cpp  recipe.h  relay.h  statecode.cpp  statecode.h  transformpayload.cpp  transformpayload.h  weightcensor.cpp  weightcensor.h
src/dto/: arduinodto.cpp  arduinodto.h  iodevicedto.cpp  iodevicedto.h
src/factory/: CMakeLists.txt  iodeviceformfactory.cpp  iodeviceformfactory.h  networkmanagerfactory.h
src/log/: bsflog.cpp
src/model/: logtablemodel.cpp
src/parser/: CMakeLists.txt  Config.cmake.in  transformpayload.cpp  transformpayload.h
src/repo/: CMakeLists.txt  Config.cmake.in  actionarduinorepo.cpp  actionarduinorepo.h  arduinorepo.cpp  arduinorepo.h  errorcoderepo.cpp  iodevicerepo.cpp  iodevicerepo.h  logrepo.cpp  logrepo.h  reciperepo.cpp  reciperepo.h  relayrepo.cpp  statecoderepo.cpp  statecoderepo.h
src/resource/: theme.qrc
src/service/: CMakeLists.txt  Config.cmake.in  iodeviceservice.cpp  iodeviceservice.h  logservice.cpp  logservice.h  networkservice.cpp  networkservice.h  payloadservice.cpp  payloadservice.h
src/service/requestmanager/: requestmanager.cpp  requestmanager.h
src/service/socketmanager/: localsocket.cpp  localsocket.h  socketclient.cpp  socketclient.h  socketmanager.cpp  socketmanager.h  tcpserver.cpp  tcpserver.h
src/statemachine/: CMakeLists.txt  Config.cmake.in  bsfpavementmachine.cpp  bsfpavementmachine.h  datatypes.h  fault.cpp  fault.h  pavementstateobject.cpp  pavementstateobject.h  statemachine.cpp  statemachine.h
src/statemachine/events/: recipedata.cpp  recipedata.h  recipeinfo.cpp  recipeinfo.h
src/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
src/ui/controller/tab/: tabcontroller.cpp  tabcontroller.h
src/ui/forms/: detectionsensorform.cpp  detectionsensorform.h  detectionsensorform.ui  deviceactionform.cpp  deviceactionform.h  deviceactionform.ui  deviceform.cpp  deviceform.h  deviceform.ui  devicemanager.cpp  devicewidget.ui  iodeviceform.cpp  iodeviceform.h  iodeviceform.ui  mainform.cpp  mainform.h  newrecipeform.ui  relayform.cpp  relayform.h  relayform.ui  testrelaywidget.ui  weightsensorform.cpp  weightsensorform.h  weightsensorform.ui
src/ui/main/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/model/: tablecomponentmodel.cpp  tablecomponentmodel.h
src/ui/statewidgets/: selectrecipe.cpp  selectrecipe.h  statemachinepage.cpp  statemachinepage.h  weightrecipe.cpp  weightrecipe.h
src/ui/tabs/: arduinotab.cpp  arduinotab.h  controlpaneltab.cpp  iodevicetab.cpp  iodevicetab.h  logtab.cpp  logtab.h  recipetab.cpp  recipetab.h  statemachinetab.cpp  statemachinetab.h
src/ui/tabwidget/: statemachinetabwidget.cpp  statemachinetabwidget.h
src/ui/widgets/: maintabbarwidget.cpp  maintabbarwidget.h
test/: AutoTest.h  CMakeLists.txt  maintestrunner.cpp  recipetest.cpp  recipetest.h  test_recipe.cpp  test_recipe.h
test/database/: dbTest.db  inmemdatabase.cpp  inmemdatabase.h
test/domain/: CMakeLists.txt  transformpayloadtest.cpp  transformpayloadtest.h  tst_recipe.cpp  tst_recipe.h
test/parser/: CMakeLists.txt  transformpayloadtest.cpp  tst_transformpayload.cpp  tst_transformpayload.h
test/repo/: CMakeLists.txt  actionarduinorepotest.cpp  actionarduinorepotest.h  arduinorepotest.cpp  arduinorepotest.h  iodevicerepotest.cpp  iodevicerepotest.h  reciperepotest.cpp  reciperepotest.h  statecoderepotest.cpp  statecoderepotest.h  tst_actionarduinorepo.cpp  tst_actionarduinorepo.h  tst_arduinorepo.cpp  tst_arduinorepo.h  tst_iodevicerepo.cpp  tst_iodevicerepo.h  tst_logrepo.cpp  tst_logrepo.h  tst_reciperepo.cpp  tst_reciperepo.h  tst_statecoderepo.cpp  tst_statecoderepo.h
test/resource/: payload  payload.json  recipeCompletedPayload.json  recipePayload.json  updatedRecipePayload.json
test/server/: CMakeLists.txt  httpserver.cpp  httpserver.h  requestmanager.cpp  requestmanager.h
test/service/: CMakeLists.txt  iodeviceservicetest.cpp  iodeviceservicetest.h  logservicetest.cpp  logservicetest.h  networkservicetest.cpp  networkservicetest.h  tst_iodeviceservice.cpp  tst_iodeviceservice.h  tst_logservice.cpp  tst_logservice.h  tst_networkservice.cpp  tst_networkservice.h  tst_payloadservice.cpp  tst_payloadservice.h
test/service/requestmanager/: tst_requestmanager.cpp  tst_requestmanager.h
test/service/server/: CMakeLists.txt  httpserver.cpp  httpserver.h
test/service/socketmanager/: tst_socketmanager.cpp  tst_socketmanager.h  udpserver.cpp  udpserver.h
(+45 files in other folders)
